--- a/02-cicloVidaAct/app/src/main/AndroidManifest.xml
+++ b/02-cicloVidaAct/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme._2024ASWGR2VAES"
         tools:targetApi="31">
         <activity
+            android:name=".ECrudEntrenador"
+            android:exported="false" />
+        <activity
             android:name=".CIntentExplicitoParametros"
             android:exported="false" />
         <activity
